# cuda-oxide

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  deny.toml  dependency-licenses.csv
.chronara/: PR-WORKFLOW.md
.github/workflows/: cargo-deny.yml  clippy.yml  fmt.yml  unit-tests.yml
crates/cargo-oxide/: Cargo.toml  README.md
crates/cuda-async/: Cargo.toml  README.md
crates/cuda-async/src/: device_box.rs  device_context.rs  device_future.rs  device_operation.rs  launch.rs  lib.rs  scheduling_policies.rs
crates/cuda-bindings/: Cargo.toml  README.md  build.rs
crates/cuda-core/: Cargo.toml  README.md
crates/cuda-device/: Cargo.toml  README.md
crates/cuda-host/: Cargo.toml  README.md
crates/cuda-macros/: Cargo.toml  README.md
crates/cuda-macros/src/: lib.rs
crates/cuda-macros/tests/: macro_guard.rs
crates/dialect-llvm/: Cargo.toml
crates/dialect-mir/: Cargo.toml  README.md
crates/dialect-nvvm/: Cargo.toml  README.md
crates/fuzzer/: Cargo.toml  README.md
crates/libnvvm-sys/: Cargo.toml  README.md
crates/mir-importer/: Cargo.toml  README.md
crates/mir-lower/: Cargo.toml  README.md
crates/mir-lower/src/: context.rs  conversion_interface.rs  helpers.rs  lib.rs  lowering.rs  type_conversion_interface.rs
crates/mir-lower/src/convert/: interface_impls.rs  mod.rs  type_interface_impls.rs  types.rs
crates/mir-lower/src/convert/intrinsics/: atomic.rs  basic.rs  clc.rs  cluster.rs  common.rs  debug.rs  mbarrier.rs  mod.rs  stmatrix.rs  tcgen05.rs  tma.rs  warp.rs  wgmma.rs
crates/mir-lower/src/convert/ops/: aggregate.rs  arithmetic.rs  call.rs  cast.rs  constants.rs  control_flow.rs  memory.rs  mod.rs
crates/mir-lower/tests/: lowering_test.rs
crates/nvjitlink-sys/: Cargo.toml  README.md
crates/nvjitlink-sys/src/: lib.rs
crates/oxide-artifacts/: Cargo.toml  README.md
crates/oxide-collectives/: Cargo.toml
crates/oxide-collectives/src/: error.rs  lib.rs
crates/oxide-collectives/src/device/: mod.rs  pe.rs  put_get.rs  signal.rs  team.rs
crates/oxide-collectives/src/host/: mod.rs  symmetric_heap.rs  topology.rs
crates/oxide-collectives/tests/: symmetric_heap.rs
crates/reserved-oxide-symbols/: Cargo.toml  README.md
crates/rustc-codegen-cuda/: Cargo.toml  README.md  rust-toolchain.toml
crates/rustc-codegen-cuda/examples/coop_groups_demo/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/coop_groups_demo/src/: main.rs
cuda-oxide-book/: conf.py  index.md  requirements.txt
cuda-oxide-book/advanced/: matrix-multiply-accelerators.md  shared-memory-and-synchronization.md
cuda-oxide-book/appendix/: api-quick-reference.md  building-from-source.md  ecosystem.md  glossary.md  supported-features.md
cuda-oxide-book/async-programming/: combinators-and-composition.md  concurrent-execution.md  scheduling-and-streams.md  the-device-operation-model.md
cuda-oxide-book/compiler/: adding-new-intrinsics.md  architecture-overview.md  fuzzing-and-differential-testing.md  lowering-pipeline.md  pliron.md  (+4 more)
docker/: Dockerfile  README.md
scripts/: smoketest.sh
(+238 files in other folders)
