[package]
name = "cuda-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for CUDA kernel development (#[kernel], #[device], etc.)"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
reserved-oxide-symbols = { workspace = true }

[dev-dependencies]
trybuild = "1"
