[package]
name = "mir-lower"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dialect-mir to dialect-llvm lowering pass"

[dependencies]
pliron = { workspace = true }
dialect-llvm = { workspace = true }
pliron-derive = { workspace = true }
thiserror = { workspace = true }
dialect-mir = { workspace = true }
dialect-nvvm = { workspace = true }
anyhow = { workspace = true }
reserved-oxide-symbols = { workspace = true }
