[package]
name = "nvjitlink-sys"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime (dlopen) bindings to NVIDIA nvJitLink (ships with the CUDA Toolkit)"

[dependencies]
libloading = { workspace = true }
thiserror = { workspace = true }
