[package]
name = "oxide-collectives"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side symmetric heap and topology building blocks for multi-GPU collectives"

[dependencies]
cuda-bindings = { workspace = true }
cuda-core = { workspace = true }
cuda-device = { workspace = true }
thiserror = { workspace = true }
