[package]
name = "coop_groups_demo"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Demonstrates the new cooperative-groups primitives:
#   - active_mask()
#   - match_any_sync / match_all_sync
#   - grid::sync()
#
# Build with:
#   cargo oxide build coop_groups_demo
# (Run requires a host-side cooperative launcher, which is wired up in cuda-core.)

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
